--- a/app_mma/app_mma.csproj
+++ b/app_mma/app_mma.csproj
@@ -17,5 +17,7 @@
     <Folder Include="Model\" />
     <Folder Include="Util\" />
     <Folder Include="Service\" />
+    <Folder Include="Interface\" />
+    <Folder Include="Componentes\" />
   </ItemGroup>
 </Project>
