--- a/app_mma.iOS/app_mma.iOS.csproj
+++ b/app_mma.iOS/app_mma.iOS.csproj
@@ -136,4 +136,10 @@
       <Name>app_mma</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\mma_icon%401x.png" />
+    <BundleResource Include="Resources\mma_icon%402x.png" />
+    <BundleResource Include="Resources\mma_icon%403x.png" />
+    <BundleResource Include="Resources\logo_mma.jpg" />
+  </ItemGroup>
 </Project>
